--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,23 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+# Ignore large dataset files
+*.nc
+*.hdf5
+*.h5
+*.csv
+
+# Ignore pictures
+*.png
+*.jpeg
+
+# Ignore obsidian?
+.obsidian
+
+# Model output
+
+pout.*
+err.0
+slurm-*
+inputs.ECEbasal.*
+ecsbatch.log.*
